		- Fix clustermissiles launching copies of themselves instead of submunitions.
		- Improvements to modular missile AAM guidance types so that they work in orbit.
		- Fix for HEKV launching unguided in non-ideal situations.
- Countermeasures
	- Add vessel's velocity to chaff ejection particle effect.
	- Use vessel acceleration instead of velocity for chaff decoy factor calculation when in space.
- Vessel Mover / Spawning:
	- Check for outdated loadMeta files when refreshing the craft list in the vessel selection window and update them since KSP doesn't update them when you save your craft!
	- Fix the spawn point selection sometimes not registering.
	- Vessels with an orbital AI that are spawned at safe orbital altitudes are spawned into circular orbits. Vessels are spawned pointing away from each other.
	- Increase maximum spawn distance to 200km.
	- Add a "bubble shuffle" to the waiting craft in continuous spawning to increase the randomness of the spawn order.
- ModIntegration:
	- Fixes for inhibiting CameraTools when initial spawning during continuous spawning and disable auto-switching to newly spawned craft joining the competition.
	- Provide helpers for CameraTools so that the camera can aim at missiles' targets (requires CameraTools v1.31.0).

v1.6.8.0
IMPROVEMENTS / FIXES
- General:
	- Add tracking of 'named modules' (from non-dependency DLLs) to the VesselModuleRegistry.
	- Optimise "Vector3.Distance(from, to) < dist" type checks.
- UI:
	- rcsOverride enabled ECMJammers now properly affect RCS in the SPH/VAB RCS GUI.
	- Fix Equivalent Armor Thickness readout in the Armor GUI.
	- Fix custom ammobelt UI overwriting belts on heterogeneous weapon groups.
- AI / WM:
	- AI GUI fixes for surface AI.
	- Fix AI disengagement from launched nuclear/EMP ordinance if within projected blast radius.
	- Expose the weave strength factor as a tunable parameter for the surface and VTOL AI.