@@ -614,6 +614,7 @@ Localization
         #LOC_BDArmory_ChaffInterval = Chaff Dump Interval Time
         #LOC_BDArmory_ChaffWaitTime = Chaff Sequence Restart Delay
         #LOC_BDArmory_ChaffFactor = Chaff Susceptibility
+        #LOC_BDArmory_NonGuardModeCMs = Non-GuardMode CMs
 
         #LOC_BDArmory_IsVIP = Is VIP?
         #LOC_BDArmory_IsVIP_enabledText = Yes
